Fix bugs: jumping photos.

--- a/src/components/DefaultImg/DefaultImg.css
+++ b/src/components/DefaultImg/DefaultImg.css
@@ -4,5 +4,5 @@
 
 .DefaultImg__img._default {
     width: 300px;
-    height: 200px;
+    height: 170px;
 }
